examples/analysetest.l
var a: u8 = 'h';
// var b: ABC = 12; // error 
// const b: u8 u16 = 123; // error
var d: u8[][][][][][] = {1, 2, 3};

var a: u16 = 1010; // error